Fixing content overlapping header, profile update date and profile page changes

--- a/frontend/web/css/folder.css
+++ b/frontend/web/css/folder.css
@@ -11,8 +11,10 @@ header {
     left: 0;
     right: 0;
     height: 70px;
-//background: #DBEAFE;
-    color: #fff;
+
+    background: #ffffff;
+    border-bottom: 1px solid #E5E7EB;
+    color: #111827;
     display: flex;
     align-items: center;
     padding: 0 20px;
@@ -20,7 +22,6 @@ header {
     justify-content: space-between;
     box-shadow: 0 1px 2px rgba(0,0,0,0.04);
 }
-
 header a {
     display: flex;
     align-items: center;
